# TrezorProtector

./: .gitignore  ATTACKS.md  LICENSE  README.md  SECURITY.md  gui.py  install.bat  main.py  requirements.txt
trezor_protector/: cli.py  crypto.py  files.py  passwords.py  trezor.py  vault.py
trezor_protector/chrome-extension/: background.js  content.js  manifest.json  offscreen.html  offscreen.js
trezor_protector/chrome-extension/popup/: popup.css  popup.html  popup.js
trezor_protector/rust/: Cargo.toml  install-linux.sh
trezor_protector/rust/assets/: 51-trezor.rules
trezor_protector/rust/tp-cli/: Cargo.toml  build.rs
trezor_protector/rust/tp-cli/src/: interact.rs  main.rs
trezor_protector/rust/tp-core/: Cargo.toml
trezor_protector/rust/tp-core/src/: audit.rs  crypto.rs  error.rs  files.rs  lib.rs  memlock.rs  passwords.rs  recovery.rs  settings.rs  totp.rs  trezor.rs  util.rs  vault.rs
trezor_protector/rust/tp-gui/: Cargo.toml  build.rs
trezor_protector/rust/tp-gui/src/: app.rs  dialogs.rs  main.rs  platform.rs  worker.rs
trezor_protector/rust/tp-host/: Cargo.toml  build.rs
trezor_protector/rust/tp-host/src/: main.rs
