[workspace]
resolver = "2"
members = ["tp-core", "tp-cli", "tp-host", "tp-gui"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
base32 = "0.5"
rand = "0.8"
argon2 = "0.5"
region = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
trezor-client = { version = "0.1", default-features = false }

[profile.release]
# Hardening / hygiene for a security tool
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
