[package]
name = "tp-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TrezorProtector desktop UI"

[[bin]]
name = "tp-gui"
path = "src/main.rs"

[dependencies]
tp-core = { path = "../tp-core" }
eframe = "0.31"
rfd = "0.15"
arboard = "3"
zeroize.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
