[package]
name = "tp-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TrezorProtector native messaging host for the Chrome extension"

[[bin]]
name = "tp-host"
path = "src/main.rs"

[dependencies]
tp-core = { path = "../tp-core" }
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
